--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,9 +23,6 @@
   </head>
 
   <body>
-    {{{body}}}
-
-
       <canvas id="renderCanvas" touch-action="none"></canvas>
 
       <script>
@@ -36,16 +33,43 @@
           // Camera
           const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 3, new BABYLON.Vector3(0, 0, 0));
           camera.attachControl(canvas, true);
+          camera.lowerRadiusLimit = 2; //The upper limit of the camera's reduced radius limits the distance of the camera from the focus
+          camera.upperRadiusLimit = 10; //The upper limit of camera magnification radius upperRadiusLimit should not be less than lowerRadiusLimit to avoid errors or ineffectiveness.
+          camera.wheelDeltaPercentage = 0.09; //Mouse wheel sensitivity
+          camera.checkCollisions = true; // Turn on the collision between perspective and scene objects
+          camera.upperBetaLimit = (Math.PI / 2) * 0.9; // Maximum beta angle of viewing angle
+          camera.lowerRadiusLimit = 5; // Minimum distance of viewing angle
+          camera.upperRadiusLimit = 1000; // Maximum distance of viewing angle
+          camera.radius = 10; // Initialize the viewing angle distance
+
+          camera.useAutoRotationBehavior = true;
+          camera.useFramingBehavior = true;
 
           // Lighting
           const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0));
 
           // Ground
           const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:10, height:10});
+          const groundMat = new BABYLON.StandardMaterial("groundMat");
+          groundMat.diffuseColor = new BABYLON.Color3(0, 1, 0);
+          ground.material = groundMat; //Place the material property of the ground
 
           // Box
           const box = BABYLON.MeshBuilder.CreateBox("box", {});
           box.position.y = 0.5;
+          const boxMat = new BABYLON.StandardMaterial("boxMat");
+          boxMat.diffuseTexture = new BABYLON.Texture("https://www.babylonjs-playground.com/textures/floor.png")
+          box.material = boxMat;
+
+          const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3});
+          roof.scaling.x = 0.75;
+          roof.rotation.z = Math.PI / 2;
+          roof.position.y = 1.22;
+          const roofMat = new BABYLON.StandardMaterial("roofMat");
+          roofMat.diffuseTexture = new BABYLON.Texture("https://assets.babylonjs.com/environments/roof.jpg", scene);
+          roof.material = roofMat;
+
+          // camera.parent = box;
 
           return scene;
         };
