--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,13 +24,8 @@
 
   <body>
       <canvas id="renderCanvas" touch-action="none"></canvas>
-
       <script>
-        var createScene = function() {
-          // Initialize Scene
-          const scene = new BABYLON.Scene(engine);
-
-          // Camera
+        const setCamera = () => {
           const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 3, new BABYLON.Vector3(0, 0, 0));
           camera.attachControl(canvas, true);
           camera.lowerRadiusLimit = 2; //The upper limit of the camera's reduced radius limits the distance of the camera from the focus
@@ -48,30 +43,64 @@
           camera.useFramingBehavior = true;
           camera.framingBehavior.radiusScale = 2;
 
+          return camera;
+        }
 
-          // Lighting
-          const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0));
-
-          // Ground
+        const setGround = () => {
           const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:10, height:10});
           const groundMat = new BABYLON.StandardMaterial("groundMat");
           groundMat.diffuseColor = new BABYLON.Color3(0, 1, 0);
-          ground.material = groundMat; //Place the material property of the ground
+          ground.material = groundMat;
 
+          return ground;
+        }
+
+        const generateHouse = (scene) => {
           // Box
           const box = BABYLON.MeshBuilder.CreateBox("box", {});
           box.position.y = 0.5;
           const boxMat = new BABYLON.StandardMaterial("boxMat");
-          boxMat.diffuseTexture = new BABYLON.Texture("https://www.babylonjs-playground.com/textures/floor.png")
+          boxMat.diffuseTexture = new BABYLON.Texture(
+            "https://www.babylonjs-playground.com/textures/floor.png"
+          )
           box.material = boxMat;
 
-          const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3});
+          const roof = BABYLON.MeshBuilder.CreateCylinder(
+            "roof",
+            {
+              diameter: 1.3,
+              height: 1.2,
+              tessellation: 3
+            }
+          );
           roof.scaling.x = 0.75;
           roof.rotation.z = Math.PI / 2;
           roof.position.y = 1.22;
           const roofMat = new BABYLON.StandardMaterial("roofMat");
-          roofMat.diffuseTexture = new BABYLON.Texture("https://assets.babylonjs.com/environments/roof.jpg", scene);
-          roof.material = roofMat;
+          roofMat.diffuseTexture = new BABYLON.Texture(
+            "https://assets.babylonjs.com/environments/roof.jpg",
+            scene
+          );
+          roof.material = roofMat
+
+          return { box, roof };
+        }
+
+        var createScene = function() {
+          // Initialize Scene
+          const scene = new BABYLON.Scene(engine);
+
+          const camera = setCamera();
+
+          // Lighting
+          const light = new BABYLON.HemisphericLight(
+            "light",
+            new BABYLON.Vector3(0, 1, 0)
+          );
+
+          setGround();
+
+          const { box } = generateHouse(scene);
 
           camera.setTarget(box);
 
