--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,6 +19,7 @@
     </style>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
   </head>
 
@@ -335,7 +336,7 @@
 
             //Give the three mesh elements of full tree the same parent.
             var _root = BABYLON.MeshBuilder.CreateBox("", {}, scene);
-            _root.isVisible = false;
+            _root.isVisible = true;
             _base.tree.parent = _root;
             _tree_crown.parent = _root;
             _leaves_crown.parent = _root;
@@ -380,38 +381,114 @@
           return ground;
         }
 
-        const generateHouse = (scene) => {
-          // Box
-          const box = BABYLON.MeshBuilder.CreateBox("box", {});
-          box.position.y = 0.5;
-          const boxMat = new BABYLON.StandardMaterial("boxMat");
-          boxMat.diffuseTexture = new BABYLON.Texture(
-            "https://www.babylonjs-playground.com/textures/floor.png"
-          )
-          box.material = boxMat;
+        // const generateHouse = (scene) => {
+        //   // Box
+        //   const box = BABYLON.MeshBuilder.CreateBox("box", {});
+        //   box.position.y = 0.5;
+        //   const boxMat = new BABYLON.StandardMaterial("boxMat");
+        //   boxMat.diffuseTexture = new BABYLON.Texture(
+        //     "https://www.babylonjs-playground.com/textures/floor.png"
+        //   )
+        //   box.material = boxMat;
 
-          const roof = BABYLON.MeshBuilder.CreateCylinder(
-            "roof",
-            {
-              diameter: 1.3,
-              height: 1.2,
-              tessellation: 3
-            }
-          );
-          roof.scaling.x = 0.75;
-          roof.rotation.z = Math.PI / 2;
-          roof.position.y = 1.22;
-          const roofMat = new BABYLON.StandardMaterial("roofMat");
-          roofMat.diffuseTexture = new BABYLON.Texture(
-            "https://assets.babylonjs.com/environments/roof.jpg",
-            scene
-          );
-          roof.material = roofMat
+        //   const roof = BABYLON.MeshBuilder.CreateCylinder(
+        //     "roof",
+        //     {
+        //       diameter: 1.3,
+        //       height: 1.2,
+        //       tessellation: 3
+        //     }
+        //   );
+        //   roof.scaling.x = 0.75;
+        //   roof.rotation.z = Math.PI / 2;
+        //   roof.position.y = 1.22;
+        //   const roofMat = new BABYLON.StandardMaterial("roofMat");
+        //   roofMat.diffuseTexture = new BABYLON.Texture(
+        //     "https://assets.babylonjs.com/environments/roof.jpg",
+        //     scene
+        //   );
+        //   roof.material = roofMat
 
-          return { box, roof };
+        //   return { box, roof };
+        // }
+
+        var createTooltip = function(mesh, scene, offsetX, offsetY) {
+          // GUI
+          var advancedTexture = BABYLON.GUI.AdvancedDynamicTexture.CreateFullscreenUI("UI");
+          advancedTexture.isForeground = true;
+          advancedTexture.useInvalidateRectOptimization = false;
+
+          let textBox1 = new BABYLON.GUI.Rectangle();
+              advancedTexture.addControl(textBox1);
+              textBox1.width = "300px";
+              textBox1.height ="200px";
+              textBox1.thickness = 2;
+
+              // Where the tooltip will show up
+              textBox1.linkOffsetX = offsetX;
+              textBox1.linkOffsetY = offsetY;
+
+              textBox1.transformCenterX = 0;
+              textBox1.transformCenterY = 1;
+              textBox1.background = '#626363';
+
+              textBox1.alpha = 0.7;
+              textBox1.scaleX = 0;
+              textBox1.scaleY = 0;
+              textBox1.cornerRadius = 30
+              textBox1.linkWithMesh(mesh);
+
+          let text1 = new BABYLON.GUI.TextBlock();
+              text1.text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id consectetur purus ut faucibus pulvinar. Placerat vestibulum lectus mauris ultrices. Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. Quisque id diam vel quam elementum pulvinar. Imperdiet sed euismod nisi porta. Habitasse platea dictumst quisque sagittis purus sit amet. Neque egestas congue quisque egestas diam in. Facilisis volutpat est velit egestas dui id ornare arcu odio. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. Eu facilisis sed odio morbi quis commodo odio. Dolor sit amet consectetur adipiscing elit ut aliquam. Tristique senectus et netus et malesuada. Nibh venenatis cras sed felis.";
+              text1.color = "White";
+              text1.fontSize = 14;
+              text1.textWrapping = true;
+              text1.textVerticalAlignment = BABYLON.GUI.Control.VERTICAL_ALIGNMENT_TOP;
+              text1.background = '#006994'
+              textBox1.addControl(text1)
+              text1.alpha = (1/text1.parent.alpha);
+              text1.paddingTop = "20px";
+              text1.paddingBottom = "20px";
+              text1.paddingLeft = "20px";
+              text1.paddingRight = "20px";
+
+          let actionManager = new BABYLON.ActionManager(scene);
+          mesh.actionManager = actionManager;
+
+            let scaleXAnimation = new BABYLON.Animation("myAnimation", "scaleX", 30, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CONSTANT);
+            let scaleYAnimation = new BABYLON.Animation("myAnimation", "scaleY", 30, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CONSTANT);
+
+              var keys = [];
+
+               keys.push({
+                            frame: 0,
+                            value: 0
+                        });
+                        keys.push({
+                          frame: 10,
+                          value: 1
+                        });
+
+                  scaleXAnimation.setKeys(keys);
+                  scaleYAnimation.setKeys(keys);
+                  textBox1.animations = [];
+                  textBox1.animations.push(scaleXAnimation);
+                  textBox1.animations.push(scaleYAnimation);
+
+          actionManager.registerAction(new BABYLON.ExecuteCodeAction(BABYLON.ActionManager.OnPointerOverTrigger, function(ev){
+                     scene.beginAnimation(textBox1, 0, 10, false);
+                    }));
+                    //if hover is over remove highlight of the mesh
+          actionManager.registerAction(new BABYLON.ExecuteCodeAction(BABYLON.ActionManager.OnPointerOutTrigger, function(ev){
+                      scene.beginAnimation(textBox1, 10, 0, false);
+                    }));
+
+          return scene;
         }
 
         var createScene = function() {
+          // TODO: Start here for initialization
+
           // Initialize Scene
           const scene = new BABYLON.Scene(engine);
 
@@ -468,12 +545,13 @@
             leafMaterial,
             scene
           );
-
-          tree.position.y = 0.5
+          tree.position.x = 0
+          tree.position.y = 0
           camera.setTarget(tree);
-          // const { box } = generateHouse(scene);
 
-          // camera.setTarget(box);
+          const treeOffsetX = "150px";
+          const treeOffsetY = "-100px"
+          createTooltip(tree, scene, treeOffsetX, treeOffsetY);
 
           return scene;
         };
