--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -361,7 +361,7 @@
           camera.radius = 100; // Initialize the viewing angle distance
 
           camera.useAutoRotationBehavior = true;
-          camera.autoRotationBehavior.idleRotationSpeed = 0.2;
+          // camera.autoRotationBehavior.idleRotationSpeed = 0.2;
 
           camera.useFramingBehavior = true;
           camera.framingBehavior.radiusScale = 50;
@@ -371,8 +371,8 @@
 
         const setGround = () => {
           const ground = BABYLON.MeshBuilder.CreateGround("ground", {
-            width: 50,
-            height: 50
+            width: 150,
+            height: 150
           });
           const groundMat = new BABYLON.StandardMaterial("groundMat");
           groundMat.diffuseColor = BABYLON.Color3.FromHexString("#585E43")
@@ -380,37 +380,6 @@
 
           return ground;
         }
-
-        // const generateHouse = (scene) => {
-        //   // Box
-        //   const box = BABYLON.MeshBuilder.CreateBox("box", {});
-        //   box.position.y = 0.5;
-        //   const boxMat = new BABYLON.StandardMaterial("boxMat");
-        //   boxMat.diffuseTexture = new BABYLON.Texture(
-        //     "https://www.babylonjs-playground.com/textures/floor.png"
-        //   )
-        //   box.material = boxMat;
-
-        //   const roof = BABYLON.MeshBuilder.CreateCylinder(
-        //     "roof",
-        //     {
-        //       diameter: 1.3,
-        //       height: 1.2,
-        //       tessellation: 3
-        //     }
-        //   );
-        //   roof.scaling.x = 0.75;
-        //   roof.rotation.z = Math.PI / 2;
-        //   roof.position.y = 1.22;
-        //   const roofMat = new BABYLON.StandardMaterial("roofMat");
-        //   roofMat.diffuseTexture = new BABYLON.Texture(
-        //     "https://assets.babylonjs.com/environments/roof.jpg",
-        //     scene
-        //   );
-        //   roof.material = roofMat
-
-        //   return { box, roof };
-        // }
 
         var createTooltip = function(mesh, scene, offsetX, offsetY) {
           // GUI
@@ -502,15 +471,17 @@
 
           setGround();
 
-          var trunkHeight = 20;
-          var trunkTaper = 0.6;
-          var trunkSlices = 5;
           //trunk and branch material
           var bark = new BABYLON.StandardMaterial("bark", scene);
           bark.emissiveTexture = new BABYLON.Texture("https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Bark_texture_wood.jpg/800px-Bark_texture_wood.jpg", scene);
           bark.diffuseTexture = new BABYLON.Texture("https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Bark_texture_wood.jpg/800px-Bark_texture_wood.jpg", scene);
           bark.diffuseTexture.uScale = 2.0;//Repeat 5 times on the Vertical Axes
           bark.diffuseTexture.vScale = 2.0;//Repeat 5 times on the Horizontal Axes
+
+          // Tree0
+          var trunkHeight = 20;
+          var trunkTaper = 0.6;
+          var trunkSlices = 5;
           var boughs = 2; // 1 or 2
           var forks = 4;
           var forkAngle = Math.PI/4;
@@ -527,7 +498,7 @@
             scene
           );
           leafMaterial.diffuseColor = new BABYLON.Color3(0,1,0);
-          const tree = createTree(
+          const tree0 = createTree(
             trunkHeight,
             trunkTaper,
             trunkSlices,
@@ -545,13 +516,180 @@
             leafMaterial,
             scene
           );
-          tree.position.x = 0
-          tree.position.y = 0
-          camera.setTarget(tree);
+          tree0.position.x = -35
+          tree0.position.y = 0
+
+          // Tree 1
+          var trunkHeight = 20;
+          var trunkTaper = 0.6;
+          var trunkSlices = 5;
+          var boughs = 2; // 1 or 2
+          var forks = 4;
+          var forkAngle = Math.PI/4;
+          var forkRatio = 2/(1+Math.sqrt(5)); //PHI the golden ratio
+          var branchAngle = Math.PI/3;
+          var bowFreq = 2;
+          var bowHeight = 3.5;
+          var branches = 10;
+          var leavesOnBranch = 5;
+          var leafWHRatio = 0.5;
+          //leaf material
+          var leafMaterial = new BABYLON.StandardMaterial(
+            "leafMaterial",
+            scene
+          );
+          leafMaterial.diffuseColor = new BABYLON.Color3(0,1,0);
+          const tree1 = createTree(
+            trunkHeight,
+            trunkTaper,
+            trunkSlices,
+            bark,
+            boughs,
+            forks,
+            forkAngle,
+            forkRatio,
+            branches,
+            branchAngle,
+            bowFreq,
+            bowHeight,
+            leavesOnBranch,
+            leafWHRatio,
+            leafMaterial,
+            scene
+          );
+          tree1.position.x = 0
+          tree1.position.y = 0
+
+          // Tree2
+          var trunkHeight = 20;
+          var trunkTaper = 0.6;
+          var trunkSlices = 5;
+          var boughs = 2; // 1 or 2
+          var forks = 4;
+          var forkAngle = Math.PI/4;
+          var forkRatio = 2/(1+Math.sqrt(5)); //PHI the golden ratio
+          var branchAngle = Math.PI/3;
+          var bowFreq = 2;
+          var bowHeight = 3.5;
+          var branches = 10;
+          var leavesOnBranch = 5;
+          var leafWHRatio = 0.5;
+          //leaf material
+          var leafMaterial = new BABYLON.StandardMaterial(
+            "leafMaterial",
+            scene
+          );
+          leafMaterial.diffuseColor = new BABYLON.Color3(0,1,0);
+          const tree2 = createTree(
+            trunkHeight,
+            trunkTaper,
+            trunkSlices,
+            bark,
+            boughs,
+            forks,
+            forkAngle,
+            forkRatio,
+            branches,
+            branchAngle,
+            bowFreq,
+            bowHeight,
+            leavesOnBranch,
+            leafWHRatio,
+            leafMaterial,
+            scene
+          );
+          tree2.position.x = 35
+          tree2.position.y = 0
+
+          // Tree3
+          var trunkHeight = 20;
+          var trunkTaper = 0.6;
+          var trunkSlices = 5;
+          var boughs = 2; // 1 or 2
+          var forks = 4;
+          var forkAngle = Math.PI/4;
+          var forkRatio = 2/(1+Math.sqrt(5)); //PHI the golden ratio
+          var branchAngle = Math.PI/3;
+          var bowFreq = 2;
+          var bowHeight = 3.5;
+          var branches = 10;
+          var leavesOnBranch = 5;
+          var leafWHRatio = 0.5;
+          //leaf material
+          var leafMaterial = new BABYLON.StandardMaterial(
+            "leafMaterial",
+            scene
+          );
+          leafMaterial.diffuseColor = new BABYLON.Color3(0,1,0);
+          const tree3 = createTree(
+            trunkHeight,
+            trunkTaper,
+            trunkSlices,
+            bark,
+            boughs,
+            forks,
+            forkAngle,
+            forkRatio,
+            branches,
+            branchAngle,
+            bowFreq,
+            bowHeight,
+            leavesOnBranch,
+            leafWHRatio,
+            leafMaterial,
+            scene
+          );
+          tree3.position.x = 70
+          tree3.position.y = 0
+          tree3.position.z = 35
+
+          // Tree4
+          var trunkHeight = 20;
+          var trunkTaper = 0.6;
+          var trunkSlices = 5;
+          var boughs = 2; // 1 or 2
+          var forks = 4;
+          var forkAngle = Math.PI/4;
+          var forkRatio = 2/(1+Math.sqrt(5)); //PHI the golden ratio
+          var branchAngle = Math.PI/3;
+          var bowFreq = 2;
+          var bowHeight = 3.5;
+          var branches = 10;
+          var leavesOnBranch = 5;
+          var leafWHRatio = 0.5;
+          //leaf material
+          var leafMaterial = new BABYLON.StandardMaterial(
+            "leafMaterial",
+            scene
+          );
+          leafMaterial.diffuseColor = new BABYLON.Color3(0,1,0);
+          const tree4 = createTree(
+            trunkHeight,
+            trunkTaper,
+            trunkSlices,
+            bark,
+            boughs,
+            forks,
+            forkAngle,
+            forkRatio,
+            branches,
+            branchAngle,
+            bowFreq,
+            bowHeight,
+            leavesOnBranch,
+            leafWHRatio,
+            leafMaterial,
+            scene
+          );
+          tree4.position.x = 70
+          tree4.position.y = 0
+          tree4.position.z = -35
+
+          camera.setTarget(tree1);
 
           const treeOffsetX = "150px";
           const treeOffsetY = "-100px"
-          createTooltip(tree, scene, treeOffsetX, treeOffsetY);
+          createTooltip(tree1, scene, treeOffsetX, treeOffsetY);
 
           return scene;
         };
